<resources>
    <string name="app_name">Cryptolator</string>
    <string name="defaultValue">0.00</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="check_for_update">Check for update</string>
    <string name="convert_from">Converting From</string>
    <string name="enter_amount">Enter the amount here:</string>
    <string name="calculateBtn">Convert</string>
    <string name="convert_to">To</string>
    <string name="converted_amount">Converted amount in home currency:</string>
    <string name="about_app">  Cryptolator lets you convert BTC and ETH crytocurrency to your Local currency. Conversion is
                                up to date and in real time. Supported currencies: USD,EUR,NGN,JPY/GBP,AUD
                                ,CAD,CHF,CNY,SEK,MXN,NZD,SGD,SGD,HKD,NOK,KRW,TYR,INR,RUB,BRL,ZAR,DKK,PLN</string>
    <string name="connect_developer">Connect with the Developer</string>
    <string name="add">Add Pair</string>
    <string name="my_list">My List</string>
    <string name="my_pair">My Pair</string>


    <string-array name="coins">
        <item>Bitcoin BTC</item>
        <item>Ethereum ETH</item>
    </string-array>

    <string-array name="coin_symbols">
        <item>\u20BF</item>
        <item>E</item>
    </string-array>

    <string-array name="currency">
        <item>US Dollars USD</item>
        <item>Nigerian Naira NGN</item>
        <item>Euros EUR</item>
        <item>Japanese Yen JPY</item>
        <item>Pound Sterling GBP</item>
        <item>Australian Dollar AUD</item>
        <item>Canadian Dollar CAD</item>
        <item>Swiss Franc CHF</item>
        <item>Chinese Yuan CNY</item>
        <item>Swedish Krona SEK</item>
        <item>Mexican Peso MXN</item>
        <item>New Zealand dollar NZD</item>
        <item>Singapore Dollar SGD</item>
        <item>Hong Kong Dollar HKD</item>
        <item>Norwegian Krone NOK</item>
        <item>South Korean Won KRW</item>
        <item>Turkish Lira TRY</item>
        <item>Indian Rupee INR</item>
        <item>Russian Ruble RUB</item>
        <item>Brazilian Real BRL</item>
        <item>South African Rand ZAR</item>
        <item>Danish Krone DKK</item>
        <item>Polish Zloty PLN</item>
    </string-array>

    <string-array name="currency_symbols">
        <item>\u0024</item>
        <item>\u20A6</item>
        <item>\u20AC</item>
        <item>\u00A5</item>
        <item>\u00A3</item>
        <item>\u0024</item>
        <item>\u0024</item>
        <item>\u20A3</item>
        <item>\u00A5</item>
        <item>\u006B</item>
        <item>\u20B1</item>
        <item>\u0024</item>
        <item>\u0024</item>
        <item>\u0024</item>
        <item>\u20BB</item>
        <item>\u20A9</item>
        <item>\u20BA</item>
        <item>\u20B9</item>
        <item>\u20BD</item>
        <item>\u20A2</item>
        <item>\u0052</item>
        <item>\006B</item>
        <item>\u007A</item>

    </string-array>

</resources>
