<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashscreen"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:text="@string/convert_from"
            style="@style/currency_text"
             />
        <Spinner
            android:id="@+id/spinner_coin"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:entries="@array/coins"
            android:gravity="top"
            style="@style/spinner"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="20"
        android:background="@android:color/transparent"
        style="@style/spinner">
        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            style="@style/input_views">
            <requestFocus/>
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:text="@string/convert_to"
            style="@style/currency_text" />
        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="match_parent"
            android:layout_weight="50"
            android:entries="@array/currency"
            android:gravity="top"
            style="@style/spinner" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="20"
        android:background="@android:color/transparent"
        style="@style/spinner">
        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/input_views"
            android:typeface="normal"
            android:background="@android:color/transparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="10">

        <Button
            android:id="@+id/convert"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:text="@string/calculateBtn"
            style="@style/conversionBtns" />
        <Button
            android:id="@+id/btn_add_to_list"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:text="@string/add"
            style="@style/conversionBtns" />
        <Button
            android:id="@+id/btn_goto_list"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:text="@string/my_list"
            style="@style/conversionBtns" />



    </LinearLayout>

</LinearLayout>